[gd_scene load_steps=4 format=3 uid="uid://co7hqrume3xpv"]

[ext_resource type="Script" path="res://base_64.gd" id="1_mrxo5"]
[ext_resource type="PackedScene" uid="uid://cbf62vrustvhy" path="res://dropoff.tscn" id="2_7ti2w"]
[ext_resource type="PackedScene" uid="uid://gab4175pns3w" path="res://data_builder.tscn" id="2_aupqs"]

[node name="Base64" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mrxo5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Base64"
horizontal_alignment = 1

[node name="Output" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Output â–º"
horizontal_alignment = 2

[node name="Data" parent="VBoxContainer" instance=ExtResource("2_7ti2w")]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "Data"
label = "Data"
area = Vector2(80, 80)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Encode" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Encode"

[node name="Decode" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Decode"

[node name="DataBuilder" parent="." instance=ExtResource("2_aupqs")]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Encode" to="." method="_on_encode_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Decode" to="." method="_on_decode_pressed"]
